--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.7.2",
+    "@types/pg": "^8.15.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
+    "pg": "^8.16.3",
     "zod": "^4.1.12"
   }
 }
